# Plonky3-mobile

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/plonky3/android/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: mobile_gpu_zk_survey.md  optimization_attempts.md
native/: Cargo.toml  build.rs
native/shaders/: add.wgsl  fft_stage.wgsl  fft_stage_fused.wgsl
native/src/: backend_metal.rs  backend_vulkan.rs  backend_webgpu.rs  fib_air.rs  gpu_dft.rs  lib.rs  poseidon_cpu.rs  vulkan.rs
